# FetchBox

./: .env.example  .gitignore  .tmuxp.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  justfile
config/: fetchbox.example.toml
fetchbox_api/: Cargo.toml
fetchbox_worker/: Cargo.toml
proto/: jobs.proto
specs/: overview.md  task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md
src/: cli.rs  humanize.rs  lib.rs  main.rs  observability.rs  server.rs
src/api/: error.rs  mod.rs  models.rs  server.rs  services.rs  state.rs  utils.rs  validation.rs
src/config/: mod.rs  models.rs  resolver.rs  sources.rs  validation.rs
src/handlers/: default.rs  mod.rs  registry.rs  traits.rs  types.rs
src/ledger/: error.rs  mod.rs  partitions.rs  pruning.rs  store.rs
src/messaging/: mod.rs
src/proto/: fetchbox.jobs.rs  mod.rs
src/queue/: broker.rs  mod.rs  store.rs
src/storage/: mod.rs
src/worker/: http.rs  mod.rs  runner.rs
tests/: api_test.rs  e2e.rs
tests/fixtures/: large.txt  sample.txt
