[package]
name = "fetchbox"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.6", features = ["macros"] }
tower-http = { version = "0.6", features = ["decompression-gzip"] }
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4", "v7", "serde", "fast-rng"] }
http-body-util = "0.1.2"
mime = "0.3.17"
thiserror = "1.0.69"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }
prost = "0.14.1"
prost-types = "0.14.1"
fjall = "2.11.2"
config = "0.15.18"
toml = "0.9.8"
dotenvy = "0.15.7"
object_store = "0.12.4"
reqwest = "0.12.24"
bytes = "1.10.1"
tower = { version = "0.5", features = ["util", "retry", "limit"] }
bon = "3.8.1"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14.0"

[build-dependencies]
prost-build = "0.14.1"
